# serializer version: 1
# name: test_evidence[bernoulli.stan]
  -6.19946
# ---
# name: test_evidence[disaster.stan]
  -176.795
# ---
# name: test_evidence[eggbox.stan]
  -15.0669
# ---
# name: test_evidence[gaussian.stan]
  -0.00551774
# ---
# name: test_evidence[glmm_h0.stan]
  -156.308
# ---
# name: test_evidence[glmm_h1.stan]
  -156.487
# ---
# name: test_evidence[himmelblau.stan]
  -4.49779
# ---
# name: test_evidence[priors.stan]
  -0.000999999
# ---
# name: test_evidence[rastrigin.stan]
  -22.8252
# ---
# name: test_evidence[rosenbrock.stan]
  -9.26497
# ---
# name: test_evidence[shell.stan]
  -5.5908
# ---
# name: test_evidence[slab_spike.stan]
  -4.56524
# ---
